--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openstackx (2011.3-d5-rcb3) natty; urgency=low
+
+  * Add rcb-component field in preparation for essex-e0 drop
+
+ -- RCB Builder <rcb-deploy@lists.rackspace.com>  Fri, 28 Oct 2011 09:40:57 -0500
+
 openstackx (2011.3-d5-rcb2) natty; urgency=low
 
   * add symlinks to nova extensions
